actually fix the overflow bug

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -17,7 +17,6 @@ html {
 
 * {
   border-radius: 0px !important;
-  max-width: inherit;
 }
 
 a, li, img {
@@ -33,7 +32,6 @@ a, li, img {
 
 
 body {
-  max-width: 100%;
   background-color: #f2f2f2 !important;
   margin-top: 85px;
   // padding-bottom: 60px;
